# ot-harjoitustyo-2023-syksy

./: .gitignore  READ.md  README.md  pyproject.toml  tasks.py  tyoaikakirjanpito.md  vaatimusmaarittely.md
Dokumentaatio/: arhitekktuuri.md  arkkitehtuuri.md  changelog.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py  maksukortti_test.pym
laskarit/viikko2/poetry-testi/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/poetry-testi/src/: index.py
laskarit/viikko2/unicafe/unicafe/: .coverage  .coveragerc
laskarit/viikko2/unicafe/unicafe/src/: kassapaate.py  maksukortti.py
laskarit/viikko2/unicafe/unicafe/src/tests/: kassapaate2_test.py  kassapaate_test.py  maksukortti_test.py
src/: .sudoku_game.py.swp  main.py  maksukortti.py  pyproject.toml  sudoku_game.py
src/Sudoku/: game.py  solver.py
src/tests/: sudoku_game_test.py  sudoku_test.py  sudokugame_test.py  test_maksukortti.py
