[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Ranel Tammel <raneltam@ad.helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"
coverage = "^7.3.2"
pygame = "^2.5.2"


[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
pytest = "^7.4.3"
pylint = "^3.0.2"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
format = "invoke format"


